Implemented external API integration for fetching books by author
Added a new service, NewYorkTimesBookProviderService, to integrate with the New York Times API for fetching book titles by author. Updated ExternalProviderBookResource to utilize this service for handling requests to fetch books by author. Modified the controller tests in ExternalProviderBookResourceTest to accommodate the changes and ensure proper functionality.

--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -209,4 +209,8 @@ jhipster:
 # https://www.jhipster.tech/common-application-properties/
 # ===================================================================
 
-# application:
+application:
+  api:
+    nytimes:
+      key: heAhyfisnHARlWMVPIHgSgzpr8UhsHXZ
+      baseurl: https://api.nytimes.com/svc/books/v3
